--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,6 @@ pyparsing==3.0.4
 pyrsistent==0.18.0
 PySocks==1.7.1
 python-dateutil==2.8.2
-pytz==2021.3
 pywin32==302
 pywinpty==2.0.2
 pyzmq==22.3.0
@@ -85,3 +84,4 @@ win-inet-pton==1.1.0
 wincertstore==0.2
 wrapt==1.12.1
 zipp==3.7.0
+gunicorn
