--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,6 @@ executing==0.8.3
 Flask==2.0.3
 idna==3.3
 importlib-metadata==4.8.2
-ipykernel==6.9.1
 ipython==8.1.1
 ipython-genutils==0.2.0
 isort==4.3.21
@@ -30,8 +29,6 @@ jedi==0.18.1
 Jinja2==3.0.3
 joblib==1.1.0
 jsonschema==3.2.0
-jupyter-client==7.1.2
-jupyter-core==4.9.2
 jupyterlab-pygments==0.1.2
 lazy-object-proxy==1.4.3
 MarkupSafe==2.0.1
@@ -41,11 +38,7 @@ mistune==0.8.4
 # mkl-fft==1.3.1
 # mkl-random==1.2.2
 # mkl-service==2.4.0
-nbclient==0.5.11
-nbconvert==6.1.0
-nbformat==5.1.3
 nest-asyncio==1.5.1
-notebook==6.4.8
 numexpr==2.8.1
 numpy==1.21.5
 packaging==21.3
@@ -53,7 +46,7 @@ pandas==1.4.1
 pandocfilters==1.5.0
 parso==0.8.3
 pickleshare==0.7.5
-# pip==21.2.2
+pip==21.2.2
 prometheus-client==0.13.1
 prompt-toolkit==3.0.20
 pure-eval==0.2.2
@@ -66,7 +59,6 @@ pyrsistent==0.18.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2021.3
-pywin32==302
 pywinpty==2.0.2
 pyzmq==22.3.0
 requests==2.27.1
